Added GPU Temperature

--- a/YAHW/YAHW.csproj
+++ b/YAHW/YAHW.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Model\HDDPartition.cs" />
     <Compile Include="Model\PerformanceInfoData.cs" />
     <Compile Include="Model\RAMInformation.cs" />
+    <Compile Include="Pages\GPUCoreTemperatures.xaml.cs">
+      <DependentUpon>GPUCoreTemperatures.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\GPUCoreWorkloads.xaml.cs">
       <DependentUpon>GPUCoreWorkloads.xaml</DependentUpon>
     </Compile>
@@ -181,8 +184,13 @@
     </Compile>
     <Compile Include="Services\WmiHardwareInfoService.cs" />
     <Compile Include="Services\UpdateVisitor.cs" />
+    <Compile Include="ViewModels\GPUCoreTemperaturesViewModel.cs" />
     <Compile Include="ViewModels\GPUCoreWorkloadsViewModel.cs" />
     <Compile Include="XmlConfigurationFile.cs" />
+    <Page Include="Pages\GPUCoreTemperatures.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Pages\GPUCoreWorkloads.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
