--- a/YAHW/packages.config
+++ b/YAHW/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net451" />
   <package id="ModernUI.WPF" version="1.0.6" targetFramework="net451" />
   <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net451" />
