--- a/YAHW/YAHW.csproj
+++ b/YAHW/YAHW.csproj
@@ -174,9 +174,12 @@
     <Compile Include="Pages\Settings\License.xaml.cs">
       <DependentUpon>License.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\Simulated\SimulatedGPU.cs" />
+    <Compile Include="Services\Simulated\SimulatedSensor.cs" />
     <Compile Include="Services\ExceptionReporterService.cs" />
     <Compile Include="Services\LocalizerService.cs" />
     <Compile Include="Services\LoggingServiceNLog.cs" />
+    <Compile Include="Services\OpenHardwareMonitorManagementServiceDebug.cs" />
     <Compile Include="Services\OpenHardwareMonitorManagementService.cs" />
     <Compile Include="SystemInformation\PsApiWrapper.cs" />
     <Compile Include="UserControls\CPUCoreTemperatureChartUserControl.xaml.cs">
