--- a/YAHW/YAHW.csproj
+++ b/YAHW/YAHW.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Pages\Settings\License.xaml.cs">
       <DependentUpon>License.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\IOpenHardwareMonitorManagementService.cs" />
+    <Compile Include="Services\Simulated\SimulatedMainboard.cs" />
+    <Compile Include="Services\Simulated\SimulatedCPU.cs" />
+    <Compile Include="Services\Simulated\SimulatedIOHardware.cs" />
     <Compile Include="Services\Simulated\SimulatedGPU.cs" />
     <Compile Include="Services\Simulated\SimulatedSensor.cs" />
     <Compile Include="Services\ExceptionReporterService.cs" />
