--- a/YAHW/packages.config
+++ b/YAHW/packages.config
@@ -6,6 +6,7 @@
   <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net451" />
   <package id="OxyPlot.Wpf" version="2014.1.546" targetFramework="net451" />
+  <package id="Prism.Core" version="6.0.1" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
   <package id="WpfLocalizeExtension" version="2.3.2" targetFramework="net451" />
   <package id="XAMLMarkupExtensions" version="1.2.1.3" targetFramework="net451" />
