--- a/YAHW/packages.config
+++ b/YAHW/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net451" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net451" />
   <package id="ModernUI.WPF" version="1.0.6" targetFramework="net451" />
-  <package id="NLog" version="4.0.1" targetFramework="net451" />
+  <package id="NLog" version="4.2.1" targetFramework="net451" />
   <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net451" />
   <package id="OxyPlot.Wpf" version="2014.1.546" targetFramework="net451" />
-  <package id="Prism.Core" version="6.0.1" targetFramework="net451" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
+  <package id="Prism.Core" version="6.1.0" targetFramework="net451" />
+  <package id="Unity" version="4.0.1" targetFramework="net451" />
   <package id="WpfLocalizeExtension" version="2.3.2" targetFramework="net451" />
-  <package id="XAMLMarkupExtensions" version="1.2.1.3" targetFramework="net451" />
+  <package id="XAMLMarkupExtensions" version="1.2.1.4" targetFramework="net451" />
 </packages>
